<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/auto">
    <item
        android:id="@+id/action_run"
        android:title="@string/action_run"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_build"
        android:title="@string/action_build"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_version_control"
        android:title="@string/action_version_control"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_find_in_project"
        android:title="@string/action_find_in_project"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_project_settings"
        android:title="@string/action_project_settings"
        app:showAsAction="never" />
</menu>
